Adding intital CRD files!

--- a/Comparative Experiments/Introduction to Completely Randomized Designs.ipynb
+++ b/Comparative Experiments/Introduction to Completely Randomized Designs.ipynb
@@ -13,12 +13,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1fe947dc",
+   "metadata": {},
+   "source": [
+    "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github.com/abrown9008/STAT-7220-Applied-Experimental-Design/blob/main/Comparative%20Experiments/Introduction%20to%20Completely%20Randomized%20Designs.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "c32244db",
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Set Working Directory ##\n",
+    "\n",
     "#%cd /content/STAT-7220-Applied-Experimental-Design/Comparative-Experiments"
    ]
   },
@@ -125,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "810cfcac",
    "metadata": {},
    "outputs": [
@@ -181,6 +191,8 @@
    "id": "3082204b",
    "metadata": {},
    "source": [
+    "- So the first three cans in the plastic treatment group are 1, 3, and 4. The first three cans in the steel group are 2, 8, and 10.\n",
+    "\n",
     "#### Be Clear on Data Collection Processes and Procedures\n",
     "\n",
     "- We've already discussed some of our processes and procedures but we should go into more detail on some others!\n",
@@ -228,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "af97cc7a",
    "metadata": {},
    "outputs": [
@@ -296,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "69cf2e95",
    "metadata": {},
    "outputs": [
@@ -342,6 +354,229 @@
     "plt.title(\"Boxplot of Can Temperatures by Cooler Type\", loc='center')\n",
     "plt.xlabel(\"Cooler Type\")\n",
     "plt.ylabel(\"Temperature (Degrees Fahrenheit)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f33dcb92",
+   "metadata": {},
+   "source": [
+    "- Remember, a boxplot consists of 5 numbers. When we look at the box itself, the bottom, middle-line, and top of the box represent the 25th, 50th, and 75th percentiles, respectively.\n",
+    "\n",
+    "    -   We can think of the width of the box (interquartile range, the difference between the 75th and 25th percentiles) as a measure of variability.\n",
+    "\n",
+    "- The lines going out of the top and bottom of the box have a length of 1.5 times the interquartile range.\n",
+    "\n",
+    "- Any points plotting above or below the upper or lower line can generally be thought of as *outliers*.\n",
+    "\n",
+    "- The way I generally interpret boxplots is by looking at the degree of overlap.\n",
+    "\n",
+    "    - If the boxes have substantial overlap, that means they have similar distributions and likely don't meaningfully differ.\n",
+    "\n",
+    "    - If the boxes do not substantially overlap, then that means the distributions have some degree (perhaps a meaningful degree!) of difference.\n",
+    "\n",
+    "- In our case, there is some overlap but not one I would consider substantial. It appears, empirically, that we have evidence of a meaningful difference in the can temperatures between the two treatment groups.\n",
+    "\n",
+    "##### Inferential Analysis: The Effects Model\n",
+    "\n",
+    "- After we perform our descriptive analysis, the next step is to perform the inferential analysis.\n",
+    "\n",
+    "- In general, we can describe pretty much every **supervised learning technique** (that is, a model with an outcome variable and at least one explanatory/independent variable) can be described as a function.\n",
+    "\n",
+    "- Remember from regression, the simple linear regression model can be written as:\n",
+    "\n",
+    "$$y_{i} = \\beta_0 + \\beta_1x_i + \\varepsilon_i $$\n",
+    "\n",
+    "- When working with categorical independent variables, like we are here, we can still write our model as a regression model, but we generally use slightly different notation:\n",
+    "\n",
+    "$$ y_{ij} = \\mu + \\tau_i + \\varepsilon_{ij} $$\n",
+    "\n",
+    "- This specific written model is called the **effects model**. \n",
+    "\n",
+    "    - $y_{ij}$ represents the $j$th replicate in the $i$th treatment group, \n",
+    "    - $\\mu$ represents the grand or overall mean of all the observations, \n",
+    "    - the $\\tau_i$'s are called the *effects* (the difference between the individual group means and the grand mean), and \n",
+    "    - $\\varepsilon_{ij}$ denotes the residual (or random error) term associated with the $j$th replicate in the $i$th treatment group.\n",
+    "\n",
+    "- Akin to regression, we have distributional assumptions in the effects model. Specifically:\n",
+    "\n",
+    "$$ Y_{ij} \\sim N(\\mu+\\tau_i,\\sigma^2) $$ $$ \\varepsilon_{ij} \\sim N(0,\\sigma^2) $$\n",
+    "\n",
+    "- So once we have collected real data like we have in the `can_data` dataframe, how do we go about estimating $\\mu$ and the $\\tau_i$'s?\n",
+    "\n",
+    "- Just like we do in regression, we use least-squares estimation! The LSEs for the group means are the same calculations given for the sample means previously in these slides.\n",
+    "\n",
+    "- The LSE for $\\mu$, say $\\hat{\\mu}$, is given by:\n",
+    "\n",
+    "$$ \\hat{\\mu} = \\bar{y}_{\\cdot\\cdot} = \\frac{1}{t}\\sum_{i=1}^t\\bar{y}_{i\\cdot} $$\n",
+    "\n",
+    "- Thus, the $\\tau_{i}$ LSEs, say $\\hat{\\tau}_{i}$, is given by:\n",
+    "\n",
+    "$$ \\hat{\\tau}_i = \\bar{y}_{i\\cdot} - \\bar{y}_{\\cdot\\cdot} $$\n",
+    "\n",
+    "- Let's see how we can estimate these values with the `car_data` using Python:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "35ea4378",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grand Mean: 33.75000000000001\n",
+      "\n",
+      "Group Means:\n",
+      "  Treatment  mean_temp\n",
+      "0   Plastic  34.431333\n",
+      "1     Steel  33.068667\n",
+      "\n",
+      "Tau Hats:\n",
+      "0    0.681333\n",
+      "1   -0.681333\n",
+      "Name: mean_temp, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Calculate the Grand Mean of Temperature ##\n",
+    "\n",
+    "mu_hat = can_data['Temperature'].mean()\n",
+    "\n",
+    "## Calculate the group means of Temperature, grouped by Treatment ##\n",
+    "\n",
+    "group_means = can_data.groupby('Treatment')['Temperature'].mean().reset_index()\n",
+    "group_means = group_means.rename(columns={'Temperature': 'mean_temp'})\n",
+    "\n",
+    "## Calculate the difference between group means and the grand mean ##\n",
+    "\n",
+    "tau_hat = group_means['mean_temp'] - mu_hat\n",
+    "\n",
+    "## Print Results ##\n",
+    "\n",
+    "print(\"Grand Mean:\", mu_hat)\n",
+    "print(\"\\nGroup Means:\")\n",
+    "print(group_means)\n",
+    "print(\"\\nTau Hats:\")\n",
+    "print(tau_hat)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9eccf359",
+   "metadata": {},
+   "source": [
+    "- Note, in this case where we only have two treatment groups, the $\\hat{\\tau}_i$'s will just be the opposite sign of each other.\n",
+    "\n",
+    "- Okay, now that we've put everything together, what statistical test do we run to determine if the difference we see in the group means and subsequently the $\\hat{\\tau}_i$'s is statistically meaningful or not?\n",
+    "\n",
+    "###### Statistical Hypotheses\n",
+    "\n",
+    "- First, what are our statistical hypotheses?\n",
+    "\n",
+    "- In words, the null hypothesis, $H_0$, is that all the group means are equal. In mathematical notation:\n",
+    "\n",
+    "$$ H_0: \\mu_1 = \\mu_2 = \\dots = \\mu_i $$\n",
+    "\n",
+    "- In words, the alternative hypothesis, $H_1$, is that at least two of the group means differ. The mathematical notation is essentially the same as the words.\n",
+    "\n",
+    "- In our case:\n",
+    "\n",
+    "$$ H_0: \\mu_{\\text{Plastic}} = \\mu_{\\text{Steel}} $$ $$ H_1: \\mu_{\\text{Plastic}} \\neq \\mu_{\\text{Steel}} $$\n",
+    "\n",
+    "- Our next step would be to calculate our test statistic. For the effects model, what is our test statistic?\n",
+    "\n",
+    "$$ F_{\\text{Stat}} = \\frac{SSTreat/(t-1)}{SSE/(n-t)} \\sim F(t-1,n-t) $$ $$ SSTreat = \\sum_{i=1}^{t}r_i(\\bar{y}_{i\\cdot} - \\bar{y}_{\\cdot\\cdot})^2 $$ $$ SSE = \\sum_{i=1}^{t}\\sum_{j=1}^{r_t}(y_{ij} - \\bar{y}_{i\\cdot})^2 $$\n",
+    "\n",
+    "- If our $F_{\\text{Stat}} > F_{cv}$, where we typically choose $F_{cv}$ such that $\\alpha = 0.05$ and $F_{cv} \\sim F(t-1,n-t)$, then this indicates that the data more strongly support the alternative hypothesis.\n",
+    "\n",
+    "- If the converse is true, $F_{\\text{Stat}} < F_{cv}$, then this indicates that the data more strongly support the null hypothesis.\n",
+    "\n",
+    "- How do we calculate all of this in Python? Fortunately for us, we can do this with the `ols` function (ols being short for \"ordinary least squares\") which is part of the `statsmodels.api` package:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "89732073",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             df      sum_sq    mean_sq         F    PR(>F)\n",
+      "Treatment   1.0   27.852907  27.852907  7.626809  0.007689\n",
+      "Residual   58.0  211.814493   3.651974       NaN       NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Install statsmodels.api ##\n",
+    "#%pip install statsmodels\n",
+    "\n",
+    "## Import statsmodels ##\n",
+    "\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.formula.api import ols\n",
+    "\n",
+    "## Fit One-Way ANOVA Model ##\n",
+    "\n",
+    "mod = ols(\"Temperature ~ Treatment\", data=can_data).fit()\n",
+    "\n",
+    "## Get the ANOVA table ##\n",
+    "\n",
+    "aov_tab = sm.stats.anova_lm(mod,typ=1)\n",
+    "\n",
+    "print(aov_tab)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff52908d",
+   "metadata": {},
+   "source": [
+    "- As we can see, the F-statistic is 7.63 and its associated p-value is 0.008.\n",
+    "\n",
+    "- Since p (which is the probability of observing a test statistic of greater magnitude in a world where we assume $H_0$ is true) is less than our typically used $\\alpha$ threshold of 0.05, this indicates to us that our data more strongly support the alternative hypothesis.\n",
+    "\n",
+    "- In more contextual language, our data support the notion that the stainless steel cooler keeps canned beverages meaningfully colder than the hard plastic cooler.\n",
+    "\n",
+    "##### Inferential Analysis: Two Group Case\n",
+    "\n",
+    "- Now, in the case when we have only two treatment groups, like we do here, this F-test can be somewhat simplified into an independent means $t$-test.\n",
+    "\n",
+    "- The statistical hypotheses stay the same but the test statistic can be rewritten as:\n",
+    "\n",
+    "$$ t_{\\text{Stat}} = \\frac{\\bar{y}_1 - \\bar{y}_2}{\\sqrt{s^2_{\\text{Pooled}}\\bigg(\\frac{1}{r_1} + \\frac{1}{r_2}\\bigg)}} \\sim t(r_1 + r_2 - 2)$$\n",
+    "\n",
+    "- where:\n",
+    "\n",
+    "$$ s^2_{\\text{Pooled}} = \\frac{(r_1 - 1)s_1^2 + (r_2 - 1)s_2^2}{r_1 + r_2 - 2} $$\n",
+    "\n",
+    "- If $|t_{\\text{Stat}}| > t_{cv}$, then we conclude that our data more strongly support the alternative hypothesis.\n",
+    "\n",
+    "- Note, $t_{\\text{Stat}}^2 = F_{\\text{Stat}}$. So technically an independent means t-test can be performed as a one-way ANOVA with two groups.\n",
+    "\n",
+    "## Your Turn!\n",
+    "\n",
+    "- Let's say we work for a dog toy manufacturing company. We want to manufacture rubber tennis balls for dogs to be able to play with and chew on that are designed to last. As you may know, some dogs who are of certain breeds and/or are aggressive chewers can break toys very easily. We want to avoid that as much as possible with our rubber tennis balls. Our engineers have come up with two different formulations of hard rubber that can be used to manufacture these balls. Let's denote these as Formula 1 and Formula 2.\n",
+    "\n",
+    "- To decide which formulation to use, we want to perform a pressure test to simulate the pressure these rubber tennis balls might experience being clamped down on by a dog's jaw. We test 60 balls of each formulation by putting them each under a hydraulic press and recording the amount of pressure exerted (in PSI) when the ball rips.\n",
+    "\n",
+    "- The data for this experiment are contained in the \"Dog Toys.xlsx\" file.\n",
+    "\n",
+    "- With these data, I want you to create a .ipynb file where you answer the following questions (check the answer key in the Dog Toys Example notebook!):\n",
+    "\n",
+    "    1. Specify the outcome and independent variables. What lurking variables might be present?\n",
+    "    2. Briefly explain why a completely randomized design might be appropriate in this context\n",
+    "    3. Perform an appropriate exploratory analysis\n",
+    "    4. Perform an appropriate inferential analysis (including the specification of $H_0$ and $H_1$)\n",
+    "    5. Provide contextual conclusions -- which formulation seems more durable?\n",
+    "    6. What questions remain?"
    ]
   }
  ],
