--- a/Introduction to Experimental Design/Intro to Experimental Design.ipynb
+++ b/Introduction to Experimental Design/Intro to Experimental Design.ipynb
@@ -9,7 +9,34 @@
     "## Dr Austin R Brown\n",
     "### Kennesaw State University\n",
     "\n",
-    "### Introduction\n",
+    "### Introduction\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45d56cc0",
+   "metadata": {},
+   "source": [
+    "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github.com/abrown9008/STAT-7220-Applied-Experimental-Design/blob/main/Introduction%20to%20Experimental%20Design/Intro%20to%20Experimental%20Design.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8503c979",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Set Working Drive ##\n",
+    "\n",
+    "#%cd /content/STAT-7220-Applied-Experimental-Design/Intro to Experimental Design"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfd53cc4",
+   "metadata": {},
+   "source": [
     "\n",
     "- When we think about statistics and data science, very often our minds go straight to the analysis of data.\n",
     "\n",
@@ -128,7 +155,7 @@
  ],
  "metadata": {
   "language_info": {
-   "name": "plaintext"
+   "name": "python"
   }
  },
  "nbformat": 4,
