Fixing colab links

--- a/Introduction to Experimental Design/Intro to Experimental Design.ipynb
+++ b/Introduction to Experimental Design/Intro to Experimental Design.ipynb
@@ -17,12 +17,12 @@
    "id": "45d56cc0",
    "metadata": {},
    "source": [
-    "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github.com/abrown9008/STAT-7220-Applied-Experimental-Design/blob/main/Introduction%20to%20Experimental%20Design/Intro%20to%20Experimental%20Design.ipynb)"
+    "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/abrown9008/STAT-7220-Applied-Experimental-Design/blob/main/Introduction%20to%20Experimental%20Design/Intro%20to%20Experimental%20Design.ipynb)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8503c979",
    "metadata": {},
    "outputs": [],
