--- a/Comparative Experiments/Dog Toys Example Solutions.ipynb
+++ b/Comparative Experiments/Dog Toys Example Solutions.ipynb
@@ -8,20 +8,40 @@
     "# Dog Toys Answer Key\n",
     "## Dr Austin R Brown\n",
     "### School of Data Science & Analytics\n",
-    "### Kennesaw State University\n",
-    "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github.com/abrown9008/STAT-7220-Applied-Experimental-Design/blob/main/Comparative%20Experiments/Dog%20Toys%20Example%20Solutions.ipynb)"
+    "### Kennesaw State University"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "2aa261ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Set Working Directory ##\n",
+    "## Remove # before running ##\n",
     "\n",
-    "#%cd content\\STAT-7220-Applied-Experimental-Design\\Comparative Experiments"
+    "# === SETUP: Clone your fork of the course repo ===\n",
+    "\n",
+    "# 1. ENTER your GitHub username (the one that owns your fork)\n",
+    "#github_username = \"ENTER_YOUR_GITHUB_USERNAME_HERE\"\n",
+    "\n",
+    "# 2. Repo name (don't change unless your fork has a different name)\n",
+    "#repo_name = \"STAT-7220-Applied-Experimental-Design\"\n",
+    "\n",
+    "# 3. Build the full GitHub repo URL\n",
+    "#repo_url = f\"https://github.com/{github_username}/{repo_name}.git\"\n",
+    "\n",
+    "# 4. Clone the repo (if it doesn't already exist in this Colab session)\n",
+    "#import os\n",
+    "\n",
+    "#if not os.path.exists(repo_name):\n",
+    "#    print(f\"Cloning repo from {repo_url}...\")\n",
+    "#    !git clone $repo_url\n",
+    "#else:\n",
+    "#    print(f\"Repo '{repo_name}' already exists in this Colab session.\")\n",
+    "\n",
+    "# 5. Change directory to the repo\n",
+    "#%cd $repo_name"
    ]
   },
   {
@@ -42,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "7a04384d",
    "metadata": {},
    "outputs": [
@@ -144,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "ba42adb4",
    "metadata": {},
    "outputs": [
