--- a/Comparative Experiments/Introduction to Completely Randomized Designs.ipynb
+++ b/Comparative Experiments/Introduction to Completely Randomized Designs.ipynb
@@ -13,23 +13,36 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1fe947dc",
-   "metadata": {},
-   "source": [
-    "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github.com/abrown9008/STAT-7220-Applied-Experimental-Design/blob/main/Comparative%20Experiments/Introduction%20to%20Completely%20Randomized%20Designs.ipynb)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "c32244db",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Set Working Directory ##\n",
+    "## Remove # before running ##\n",
     "\n",
-    "#%cd /content/STAT-7220-Applied-Experimental-Design/Comparative-Experiments"
+    "# === SETUP: Clone your fork of the course repo ===\n",
+    "\n",
+    "# 1. ENTER your GitHub username (the one that owns your fork)\n",
+    "#github_username = \"ENTER_YOUR_GITHUB_USERNAME_HERE\"\n",
+    "\n",
+    "# 2. Repo name (don't change unless your fork has a different name)\n",
+    "#repo_name = \"STAT-7220-Applied-Experimental-Design\"\n",
+    "\n",
+    "# 3. Build the full GitHub repo URL\n",
+    "#repo_url = f\"https://github.com/{github_username}/{repo_name}.git\"\n",
+    "\n",
+    "# 4. Clone the repo (if it doesn't already exist in this Colab session)\n",
+    "#import os\n",
+    "\n",
+    "#if not os.path.exists(repo_name):\n",
+    "#    print(f\"Cloning repo from {repo_url}...\")\n",
+    "#    !git clone $repo_url\n",
+    "#else:\n",
+    "#    print(f\"Repo '{repo_name}' already exists in this Colab session.\")\n",
+    "\n",
+    "# 5. Change directory to the repo\n",
+    "#%cd $repo_name"
    ]
   },
   {
