Resolving repo clone issue

--- a/Comparative Experiments/Dog Toys Example Solutions.ipynb
+++ b/Comparative Experiments/Dog Toys Example Solutions.ipynb
@@ -18,30 +18,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Remove # before running ##\n",
-    "\n",
-    "# === SETUP: Clone your fork of the course repo ===\n",
+    "# === COURSE REPO SETUP === #\n",
     "\n",
     "# 1. ENTER your GitHub username (the one that owns your fork)\n",
     "#github_username = \"ENTER_YOUR_GITHUB_USERNAME_HERE\"\n",
     "\n",
-    "# 2. Repo name (don't change unless your fork has a different name)\n",
+    "# 2. Name of the repo (don't change unless your fork name is different)\n",
     "#repo_name = \"STAT-7220-Applied-Experimental-Design\"\n",
     "\n",
-    "# 3. Build the full GitHub repo URL\n",
+    "# 3. Build the full repo URL for cloning\n",
     "#repo_url = f\"https://github.com/{github_username}/{repo_name}.git\"\n",
     "\n",
-    "# 4. Clone the repo (if it doesn't already exist in this Colab session)\n",
     "#import os\n",
     "\n",
-    "#if not os.path.exists(repo_name):\n",
-    "#    print(f\"Cloning repo from {repo_url}...\")\n",
-    "#    !git clone $repo_url\n",
+    "# --- Detect if we're already in a repo ---\n",
+    "#cwd = os.getcwd()\n",
+    "#if cwd.endswith(repo_name):\n",
+    "#    print(f\"✅ Already inside repo folder: {cwd}\")\n",
     "#else:\n",
-    "#    print(f\"Repo '{repo_name}' already exists in this Colab session.\")\n",
+    "#    # --- If the repo folder exists, check if it's nested ---\n",
+    "#    if os.path.exists(repo_name):\n",
+    "#        print(f\"⚠️ Found existing folder '{repo_name}'. Skipping clone to avoid nesting.\")\n",
+    "#   else:\n",
+    "#        print(f\"📥 Cloning repo from {repo_url}...\")\n",
+    "#        os.system(f\"git clone {repo_url}\")\n",
     "\n",
-    "# 5. Change directory to the repo\n",
-    "#%cd $repo_name"
+    "#    # --- Change to repo directory ---\n",
+    "#    if os.path.exists(repo_name):\n",
+    "#        os.chdir(repo_name)\n",
+    "#        print(f\"📂 Changed directory to: {os.getcwd()}\")\n",
+    "#    else:\n",
+    "#        print(\"❌ ERROR: Repo folder not found. Please check your GitHub username.\")\n",
+    "\n",
+    "# --- Check if this is the instructor's repo instead of student's fork ---\n",
+    "#remote_url = os.popen(\"git config --get remote.origin.url\").read().strip()\n",
+    "#if \"abrown9008\" in remote_url:\n",
+    "#    print(\"⚠️ WARNING: You are working in the instructor's repo, not your fork!\")\n",
+    "#    print(\"💡 Please fork the repo to your own account and update `github_username` above.\")\n",
+    "#else:\n",
+    "#    print(f\"🔗 Connected to fork at: {remote_url}\")"
    ]
   },
   {
