--- a/Python for Data Science/Introduction to Python for Data Science.ipynb
+++ b/Python for Data Science/Introduction to Python for Data Science.ipynb
@@ -14,18 +14,8 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "id": "ba95023e",
-      "metadata": {
-        "id": "ba95023e"
-      },
-      "source": [
-        "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/abrown9008/STAT-7220-Applied-Experimental-Design/blob/main/Python%20for%20Data%20Science/Introduction%20to%20Python%20for%20Data%20Science.ipynb)"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "1452b8fe",
       "metadata": {
         "colab": {
@@ -36,18 +26,45 @@
       },
       "outputs": [],
       "source": [
-        "## Remove the # from the left of the below\n",
-        "## lines of code and execute. This will clone the class\n",
-        "## repository to your Colab and set your working drive\n",
-        "## to today's lecture file ##\n",
+        "# === COURSE REPO SETUP === #\n",
         "\n",
-        "##### NOTE: YOU ONLY NEED TO RUN THE CLONE CODE BELOW ONCE AND ONLY\n",
-        "##### ONCE. ONCE WE DO IT AT THE BEGINNING OF THE SEMESTER, IT WON'T\n",
-        "##### AGAIN BE REQUIRED ############################################\n",
+        "# 1. ENTER your GitHub username (the one that owns your fork)\n",
+        "#github_username = \"ENTER_YOUR_GITHUB_USERNAME_HERE\"\n",
         "\n",
-        "#!git clone https://github.com/abrown9008/STAT-7220-Applied-Experimental-Design.git\n",
+        "# 2. Name of the repo (don't change unless your fork name is different)\n",
+        "#repo_name = \"STAT-7220-Applied-Experimental-Design\"\n",
         "\n",
-        "#%cd /content/STAT-7220-Applied-Experimental-Design/Python for Data Science"
+        "# 3. Build the full repo URL for cloning\n",
+        "#repo_url = f\"https://github.com/{github_username}/{repo_name}.git\"\n",
+        "\n",
+        "#import os\n",
+        "\n",
+        "# --- Detect if we're already in a repo ---\n",
+        "#cwd = os.getcwd()\n",
+        "#if cwd.endswith(repo_name):\n",
+        "#    print(f\"✅ Already inside repo folder: {cwd}\")\n",
+        "#else:\n",
+        "#    # --- If the repo folder exists, check if it's nested ---\n",
+        "#    if os.path.exists(repo_name):\n",
+        "#        print(f\"⚠️ Found existing folder '{repo_name}'. Skipping clone to avoid nesting.\")\n",
+        "#   else:\n",
+        "#        print(f\"📥 Cloning repo from {repo_url}...\")\n",
+        "#        os.system(f\"git clone {repo_url}\")\n",
+        "\n",
+        "#    # --- Change to repo directory ---\n",
+        "#    if os.path.exists(repo_name):\n",
+        "#        os.chdir(repo_name)\n",
+        "#        print(f\"📂 Changed directory to: {os.getcwd()}\")\n",
+        "#    else:\n",
+        "#        print(\"❌ ERROR: Repo folder not found. Please check your GitHub username.\")\n",
+        "\n",
+        "# --- Check if this is the instructor's repo instead of student's fork ---\n",
+        "#remote_url = os.popen(\"git config --get remote.origin.url\").read().strip()\n",
+        "#if \"abrown9008\" in remote_url:\n",
+        "#    print(\"⚠️ WARNING: You are working in the instructor's repo, not your fork!\")\n",
+        "#    print(\"💡 Please fork the repo to your own account and update `github_username` above.\")\n",
+        "#else:\n",
+        "#    print(f\"🔗 Connected to fork at: {remote_url}\")"
       ]
     },
     {
