Final, final fix of cloning and working drive issue

--- a/Introduction to Experimental Design/Intro to Experimental Design.ipynb
+++ b/Introduction to Experimental Design/Intro to Experimental Design.ipynb
@@ -22,42 +22,50 @@
     "# === COURSE REPO SETUP === #\n",
     "\n",
     "# 1. ENTER your GitHub username (the one that owns your fork)\n",
-    "#github_username = \"ENTER_YOUR_GITHUB_USERNAME_HERE\"\n",
+    "#github_username = \"abrown9008\"\n",
     "\n",
     "# 2. Name of the repo (don't change unless your fork name is different)\n",
-    "#repo_name = \"STAT-7220-Applied-Experimental-Design\"\n",
+    "repo_name = \"STAT-7220-Applied-Experimental-Design\"\n",
     "\n",
     "# 3. Build the full repo URL for cloning\n",
-    "#repo_url = f\"https://github.com/{github_username}/{repo_name}.git\"\n",
+    "repo_url = f\"https://github.com/{github_username}/{repo_name}.git\"\n",
     "\n",
-    "#import os\n",
+    "import os\n",
     "\n",
     "# --- Detect if we're already in a repo ---\n",
-    "#cwd = os.getcwd()\n",
-    "#if cwd.endswith(repo_name):\n",
-    "#    print(f\"✅ Already inside repo folder: {cwd}\")\n",
-    "#else:\n",
-    "#    # --- If the repo folder exists, check if it's nested ---\n",
-    "#    if os.path.exists(repo_name):\n",
-    "#        print(f\"⚠️ Found existing folder '{repo_name}'. Skipping clone to avoid nesting.\")\n",
-    "#   else:\n",
-    "#        print(f\"📥 Cloning repo from {repo_url}...\")\n",
-    "#        os.system(f\"git clone {repo_url}\")\n",
+    "cwd = os.getcwd()\n",
+    "if cwd.endswith(repo_name):\n",
+    "    print(f\"✅ Already inside repo folder: {cwd}\")\n",
+    "else:\n",
+    "    # --- If the repo folder exists, check if it's nested ---\n",
+    "    if os.path.exists(repo_name):\n",
+    "        print(f\"⚠️ Found existing folder '{repo_name}'. Skipping clone to avoid nesting.\")\n",
+    "    else:\n",
+    "        print(f\"📥 Cloning repo from {repo_url}...\")\n",
+    "        os.system(f\"git clone {repo_url}\")\n",
     "\n",
-    "#    # --- Change to repo directory ---\n",
-    "#    if os.path.exists(repo_name):\n",
-    "#        os.chdir(repo_name)\n",
-    "#        print(f\"📂 Changed directory to: {os.getcwd()}\")\n",
-    "#    else:\n",
-    "#        print(\"❌ ERROR: Repo folder not found. Please check your GitHub username.\")\n",
+    "    # --- Change to repo directory ---\n",
+    "    if os.path.exists(repo_name):\n",
+    "        os.chdir(repo_name)\n",
+    "        print(f\"📂 Changed directory to: {os.getcwd()}\")\n",
+    "    else:\n",
+    "        print(\"❌ ERROR: Repo folder not found. Please check your GitHub username.\")\n",
     "\n",
     "# --- Check if this is the instructor's repo instead of student's fork ---\n",
-    "#remote_url = os.popen(\"git config --get remote.origin.url\").read().strip()\n",
-    "#if \"abrown9008\" in remote_url:\n",
-    "#    print(\"⚠️ WARNING: You are working in the instructor's repo, not your fork!\")\n",
-    "#    print(\"💡 Please fork the repo to your own account and update `github_username` above.\")\n",
-    "#else:\n",
-    "#    print(f\"🔗 Connected to fork at: {remote_url}\")"
+    "# This command needs to be run from within the repository directory\n",
+    "remote_url = os.popen(\"git config --get remote.origin.url\").read().strip()\n",
+    "\n",
+    "if \"abrown9008\" in remote_url:\n",
+    "    print(\"⚠️ WARNING: You are working in the instructor's repo, not your fork!\")\n",
+    "    print(\"💡 Please fork the repo to your own account and update `github_username` above.\")\n",
+    "else:\n",
+    "    print(f\"🔗 Connected to fork at: {remote_url}\")\n",
+    "\n",
+    "# Set Today's Directory #\n",
+    "\n",
+    "today_dir = \"Introduction to Experimental Design\"\n",
+    "os.chdir(today_dir)\n",
+    "print(f\"📂 Changed directory to: {os.getcwd()}\")"
    ]
   },
   {
