Adding Assumption Checking

--- a/Comparative Experiments/Introduction to Completely Randomized Designs.ipynb
+++ b/Comparative Experiments/Introduction to Completely Randomized Designs.ipynb
@@ -14,10 +14,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "c32244db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'github_username' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)\n",
+      "Cell \u001b[1;32mIn[34], line 10\u001b[0m\n",
+      "\u001b[0;32m      7\u001b[0m repo_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSTAT-7220-Applied-Experimental-Design\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# 3. Build the full repo URL for cloning\u001b[39;00m\n",
+      "\u001b[1;32m---> 10\u001b[0m repo_url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://github.com/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mgithub_username\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrepo_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.git\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mos\u001b[39;00m\n",
+      "\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# --- Detect if we're already in a repo ---\u001b[39;00m\n",
+      "\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'github_username' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# === COURSE REPO SETUP === #\n",
     "\n",
@@ -171,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "810cfcac",
    "metadata": {},
    "outputs": [
@@ -276,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "af97cc7a",
    "metadata": {},
    "outputs": [
@@ -344,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "69cf2e95",
    "metadata": {},
    "outputs": [
@@ -436,7 +454,8 @@
     "\n",
     "- Akin to regression, we have distributional assumptions in the effects model. Specifically:\n",
     "\n",
-    "$$ Y_{ij} \\sim N(\\mu+\\tau_i,\\sigma^2) $$ $$ \\varepsilon_{ij} \\sim N(0,\\sigma^2) $$\n",
+    "$$ Y_{ij} \\sim N(\\mu+\\tau_i,\\sigma^2) $$ \n",
+    "$$ \\varepsilon_{ij} \\sim N(0,\\sigma^2) $$\n",
     "\n",
     "- So once we have collected real data like we have in the `can_data` dataframe, how do we go about estimating $\\mu$ and the $\\tau_i$'s?\n",
     "\n",
@@ -455,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "35ea4378",
    "metadata": {},
    "outputs": [
@@ -521,11 +540,15 @@
     "\n",
     "- In our case:\n",
     "\n",
-    "$$ H_0: \\mu_{\\text{Plastic}} = \\mu_{\\text{Steel}} $$ $$ H_1: \\mu_{\\text{Plastic}} \\neq \\mu_{\\text{Steel}} $$\n",
+    "$$ H_0: \\mu_{\\text{Plastic}} = \\mu_{\\text{Steel}} $$ \n",
+    "\n",
+    "$$ H_1: \\mu_{\\text{Plastic}} \\neq \\mu_{\\text{Steel}} $$\n",
     "\n",
     "- Our next step would be to calculate our test statistic. For the effects model, what is our test statistic?\n",
     "\n",
-    "$$ F_{\\text{Stat}} = \\frac{SSTreat/(t-1)}{SSE/(n-t)} \\sim F(t-1,n-t) $$ $$ SSTreat = \\sum_{i=1}^{t}r_i(\\bar{y}_{i\\cdot} - \\bar{y}_{\\cdot\\cdot})^2 $$ $$ SSE = \\sum_{i=1}^{t}\\sum_{j=1}^{r_t}(y_{ij} - \\bar{y}_{i\\cdot})^2 $$\n",
+    "$$ F_{\\text{Stat}} = \\frac{SSTreat/(t-1)}{SSE/(n-t)} \\sim F(t-1,n-t) $$\n",
+    "$ SSTreat = \\sum_{i=1}^{t}r_i(\\bar{y}_{i\\cdot} - \\bar{y}_{\\cdot\\cdot})^2 $$ \n",
+    "$$ SSE = \\sum_{i=1}^{t}\\sum_{j=1}^{r_t}(y_{ij} - \\bar{y}_{i\\cdot})^2 $$\n",
     "\n",
     "- If our $F_{\\text{Stat}} > F_{cv}$, where we typically choose $F_{cv}$ such that $\\alpha = 0.05$ and $F_{cv} \\sim F(t-1,n-t)$, then this indicates that the data more strongly support the alternative hypothesis.\n",
     "\n",
@@ -536,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "89732073",
    "metadata": {},
    "outputs": [
