--- a/Python for Data Science/Introduction to Python for Data Science.ipynb
+++ b/Python for Data Science/Introduction to Python for Data Science.ipynb
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 105,
       "id": "1452b8fe",
       "metadata": {
         "colab": {
@@ -24,7 +24,15 @@
         "id": "1452b8fe",
         "outputId": "34e2e131-9736-401f-cecd-5639612e67ad"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "📂 Changed directory to: d:\\KSU\\Teaching\\STAT 7220\\STAT-7220-Applied-Experimental-Design\\STAT-7220-Applied-Experimental-Design\\Python for Data Science\n"
+          ]
+        }
+      ],
       "source": [
         "# === COURSE REPO SETUP === #\n",
         "\n",
@@ -32,46 +40,46 @@
         "#github_username = \"abrown9008\"\n",
         "\n",
         "# 2. Name of the repo (don't change unless your fork name is different)\n",
-        "repo_name = \"STAT-7220-Applied-Experimental-Design\"\n",
+        "#repo_name = \"STAT-7220-Applied-Experimental-Design\"\n",
         "\n",
         "# 3. Build the full repo URL for cloning\n",
-        "repo_url = f\"https://github.com/{github_username}/{repo_name}.git\"\n",
+        "#repo_url = f\"https://github.com/{github_username}/{repo_name}.git\"\n",
         "\n",
         "import os\n",
         "\n",
         "# --- Detect if we're already in a repo ---\n",
-        "cwd = os.getcwd()\n",
-        "if cwd.endswith(repo_name):\n",
-        "    print(f\"✅ Already inside repo folder: {cwd}\")\n",
-        "else:\n",
+        "#cwd = os.getcwd()\n",
+        "#if cwd.endswith(repo_name):\n",
+        "#    print(f\"✅ Already inside repo folder: {cwd}\")\n",
+        "#else:\n",
         "    # --- If the repo folder exists, check if it's nested ---\n",
-        "    if os.path.exists(repo_name):\n",
-        "        print(f\"⚠️ Found existing folder '{repo_name}'. Skipping clone to avoid nesting.\")\n",
-        "    else:\n",
-        "        print(f\"📥 Cloning repo from {repo_url}...\")\n",
-        "        os.system(f\"git clone {repo_url}\")\n",
+        "#    if os.path.exists(repo_name):\n",
+        "#        print(f\"⚠️ Found existing folder '{repo_name}'. Skipping clone to avoid nesting.\")\n",
+        "#    else:\n",
+        "#        print(f\"📥 Cloning repo from {repo_url}...\")\n",
+        "#        os.system(f\"git clone {repo_url}\")\n",
         "\n",
         "    # --- Change to repo directory ---\n",
-        "    if os.path.exists(repo_name):\n",
-        "        os.chdir(repo_name)\n",
-        "        print(f\"📂 Changed directory to: {os.getcwd()}\")\n",
-        "    else:\n",
-        "        print(\"❌ ERROR: Repo folder not found. Please check your GitHub username.\")\n",
+        "#    if os.path.exists(repo_name):\n",
+        "#        os.chdir(repo_name)\n",
+        "#        print(f\"📂 Changed directory to: {os.getcwd()}\")\n",
+        "#    else:\n",
+        "#        print(\"❌ ERROR: Repo folder not found. Please check your GitHub username.\")\n",
         "\n",
         "# --- Check if this is the instructor's repo instead of student's fork ---\n",
         "# This command needs to be run from within the repository directory\n",
-        "remote_url = os.popen(\"git config --get remote.origin.url\").read().strip()\n",
+        "#remote_url = os.popen(\"git config --get remote.origin.url\").read().strip()\n",
         "\n",
-        "if \"abrown9008\" in remote_url:\n",
-        "    print(\"⚠️ WARNING: You are working in the instructor's repo, not your fork!\")\n",
-        "    print(\"💡 Please fork the repo to your own account and update `github_username` above.\")\n",
-        "else:\n",
-        "    print(f\"🔗 Connected to fork at: {remote_url}\")\n",
+        "#if \"abrown9008\" in remote_url:\n",
+        "#    print(\"⚠️ WARNING: You are working in the instructor's repo, not your fork!\")\n",
+        "#    print(\"💡 Please fork the repo to your own account and update `github_username` above.\")\n",
+        "#else:\n",
+        "#    print(f\"🔗 Connected to fork at: {remote_url}\")\n",
         "\n",
         "# Set Today's Directory #\n",
         "\n",
-        "today_dir = \"Python for Data Science\"\n",
-        "os.chdir(today_dir)\n",
+        "#today_dir = \"Python for Data Science\"\n",
+        "#os.chdir(today_dir)\n",
         "print(f\"📂 Changed directory to: {os.getcwd()}\")"
       ]
     },
@@ -222,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 106,
       "id": "4a011d3c",
       "metadata": {
         "id": "4a011d3c",
@@ -257,7 +265,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 107,
       "id": "1f97bae9",
       "metadata": {
         "id": "1f97bae9",
@@ -295,7 +303,7 @@
         "\n",
         "- What is the data science workflow? Let's take a look!\n",
         "\n",
-        "![From R for Data Science 2nd Edition](https://github.com/abrown9008/STAT-7220-Applied-Experimental-Design/blob/main/Python%20for%20Data%20Science/Data%20Science%20Workflow.png?raw=1)\n",
+        "![From R for Data Science 2nd Edition](Data Science Workflow.png)\n",
         "\n",
         "## Importing Data/Data Loading\n",
         "\n",
@@ -331,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 108,
       "id": "ea6486b8",
       "metadata": {
         "id": "ea6486b8"
@@ -360,7 +368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 109,
       "id": "51e3e139",
       "metadata": {
         "id": "51e3e139",
@@ -392,7 +400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 110,
       "id": "16b8d5e2",
       "metadata": {
         "id": "16b8d5e2",
@@ -429,7 +437,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 111,
       "id": "70b90a76",
       "metadata": {
         "id": "70b90a76",
@@ -484,7 +492,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 112,
       "id": "d32ece25",
       "metadata": {
         "id": "d32ece25",
@@ -567,7 +575,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 113,
       "id": "8eb118a1",
       "metadata": {
         "id": "8eb118a1",
@@ -615,7 +623,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 114,
       "id": "f084455a",
       "metadata": {
         "id": "f084455a",
@@ -676,7 +684,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 115,
       "id": "f1f80e4f",
       "metadata": {
         "id": "f1f80e4f",
@@ -734,7 +742,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 116,
       "id": "421a2b96",
       "metadata": {
         "id": "421a2b96",
@@ -776,7 +784,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 117,
       "id": "97afb0a1",
       "metadata": {
         "id": "97afb0a1",
